# waylock

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PACKAGING.md  README.md  build.zig  build.zig.zon  waylock.toml
.builds/: alpine.yml  archlinux.yml  freebsd.yml
.github/workflows/: ci_build.yml
doc/: waylock.1.scd
pam.d/: waylock
src/: Lock.zig  Output.zig  PasswordBuffer.zig  Seat.zig  auth.rs  auth.zig  color.rs  config.rs  flags.zig  input.rs  lock.rs  logger.rs  main.rs  main.zig  options.rs  output.rs  pam.zig  surface.rs
src/lock/: auth.rs  env.rs  input.rs  output.rs  surface.rs
