[package]
name = "waylock"
version = "0.3.1"

authors = ["Isaac Freund <ifreund@ifreund.xyz>"]
description = "A simple screenlocker for wayland compositors."
edition = "2018"
keywords = ["wayland", "screenlocker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ifreund/waylock"

include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "READEME.md",
    "waylock.toml",
    "**/*.rs",
]

[dependencies]
ansi_term = "0.12"
atty = "0.2"
cairo-rs = { version = "0.8", default-features = false }
clap = "2"
humantime = "2"
log = { version = "0.4", features = ["std"] }
pam = "0.7"
serde = { version = "1", features = ["derive"] }
smithay-client-toolkit = { version = "0.9", default-features = false, features = ["calloop"] }
toml = "0.5"
users = "0.10"
