[package]
name = "waylock"
version = "0.3.2"

authors = ["Isaac Freund <ifreund@ifreund.xyz>"]
description = "A simple screenlocker for wayland compositors."
edition = "2018"
keywords = ["wayland", "screenlocker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ifreund/waylock"

include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "READEME.md",
    "waylock.toml",
    "**/*.rs",
]

[dependencies]
clap = "2"
humantime = "2"
log = { version = "0.4", features = ["std"] }
pam = "0.7"
serde = { version = "1", features = ["derive"] }
# See https://github.com/ifreund/waylock/issues/19
wayland-client = { version = "0.26", features = ["use_system_lib"] }
smithay-client-toolkit = { version = "0.9", default-features = false, features = ["calloop"] }
toml = "0.5"
users = "0.10"
